# OBJViewer_GLFW

./: CMakeLists.txt  TODO.txt  main.cpp
data/Shaders/: basicShader.frag  bk_basicShader.frag
data/troll/: troll_raw.tex
include/inputs/: Raton.cpp  Raton.hpp  Teclado.cpp  Teclado.hpp
include/loaders/: BMPloader.cpp  BMPloader.hpp  Consola.cpp  Consola.hpp  ObjectDataloader.cpp  ObjectDataloader.hpp  shader_utils.cpp  shader_utils.hpp
include/manager/: ObjectManager.cpp  ObjectManager.hpp
include/objects/: BasicObjects.cpp  BasicObjects.hpp  Camera.cpp  Camera.hpp  LuzPuntual.cpp  LuzPuntual.hpp  Object.cpp  Object.hpp  Object3D.cpp  Object3D.hpp  ObjectData.cpp  ObjectData.hpp  dataObjectOld.txt  renderObject.cpp  renderObject.hpp
include/objects/Material/: Map.cpp  Map.hpp  Material.cpp  Material.hpp  Shader.cpp  Shader.hpp
include/objects/Material/Textures/: Textura.cpp  Textura.hpp
include/utils/: InitHelper.cpp  InitHelper.hpp  stringHelper.cpp  stringHelper.hpp
libs/include/glm/glm/detail/: _fixes.hpp
libs/lib/: glfw3.h  glfw3native.h
